# haskell-aws-lambda-kleisli

./: .gitignore  .travis.yml  Kleisli.py  Makefile  README.md  cabal.project  collect-shared-libs.py  example.py  kleisli.cabal  kleisli_native.c  setup.py
package-aws-lambda/: package-aws-lambda.cabal
package-aws-lambda/src/: Orphans.hs  PackageAwsLambda.hs
package-aws-lambda/templates/: module.c  module.py  setup.py
src/: Kleisli.hs
