cabal-version: 2.2
name: kleisli
version: 1

synopsis: Haskell on AWS Lambda
category: AWS
description:
  Run Haskell functions on AWS Lambda.
  .
  Uses Python C extension + Haskell foreign-library -approach.

license:      Apache-2.0
license-file: LICENSE
author:       Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:   Oleg Grenrus <oleg.grenrus@iki.fi>

tested-with:  GHC ==8.2.2

source-repository head
  type:     git
  location: https://github.com/futurice/haskell-aws-lambda-kleisli

foreign-library kleisli-haskell
  type:             native-shared
	-- easier for our tooling to not specify the version
  -- lib-version-info: 2:0:0
  ghc-options:      -Wall
  hs-source-dirs:   src
  default-language: Haskell2010
  other-modules:
    Kleisli

  build-depends:
    , base        ^>=4.10
    , aeson       ^>=1.3.1.0
    , bytestring  ^>=0.10.8.2
    , lens        ^>=4.16.1
    , lens-aeson  ^>=1.0.2
    , text        ^>=1.2.3.0
