cabal-version:       2.2
name:                package-aws-lambda
version:             0

synopsis: Haskell on AWS Lambda, packager
category: AWS, Development
description:
  Package a foreign library as zip suitable for upload to AWS Lambda.

license:      Apache-2.0
license-file: LICENSE
author:       Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:   Oleg Grenrus <oleg.grenrus@iki.fi>

tested-with:  GHC ==8.2.2

extra-source-files:
  templates/module.c
  templates/module.py
  templates/setup.py

source-repository head
  type:     git
  location: https://github.com/futurice/haskell-aws-lambda-kleisli

library
  ghc-options:      -Wall
  hs-source-dirs:   src
  default-language: Haskell2010
  exposed-modules:
    PackageAwsLambda
  other-modules:
    Orphans

  -- GHC boot libraries
  build-depends:
    , base              ^>=4.10.1.0
    , bytestring        ^>=0.10.8.2
    , containers        ^>=0.5.10.2
    , deepseq           ^>=1.4.3.0
    , directory         ^>=1.3.0.2
    , filepath          ^>=1.4.1.2
    , process           ^>=1.6.1.0
    , template-haskell  ^>=2.12.0.0
    , text              ^>=1.2.3.0

  -- other dependencies
  build-depends:
    , aeson             ^>=1.3.1.0
    , base-compat       ^>=0.10.1
    , cabal-plan        ^>=0.3.0.0
    , Glob              ^>=0.9.2
    , microstache       ^>=1.0.1.1
    , parsers           ^>=0.12.8
    , temporary         ^>=1.3
    , th-lift-instances ^>=0.1.11
    , trifecta          ^>=1.7.1.1
    , zip-archive       ^>=0.3.2.4
